<resources>
    <string name="app_name">GPS Uploader</string>
    <string name="parse_app_id">5M2u8zCYhBxJJIQOjQvEM5L6cgly6oD6KWaG4R1L</string>
    <string name="parse_client_key">VWtOK9JNJDl9QJFQOugeTvnfpgIaRqFDRZV8rYSe</string>
    <string name="action_settings">Settings</string>
    <string name="status">Status</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="notavailable">NA</string>
    <string name="send">Send</string>
    <string name="distance">Target Distance(m)</string>
    <string name="direction">Target Direction</string>
    <string name="targetLat">Target Latitude:</string>
    <string name="targetLon">Target Longitude:</string>
    <string name="outofservice">Out of Service</string>
    <string name="inservice">In Service</string>
    <string name="lonPrefix">Longitude: </string>
    <string name="latPrefix">Latitude: </string>
</resources>
