<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notavailable"
        android:id="@+id/tv_status"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notavailable"
        android:id="@+id/tv_latitude"
        android:layout_below="@+id/tv_status"
        android:layout_alignStart="@+id/tv_status"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notavailable"
        android:id="@+id/tv_longitude"
        android:layout_below="@+id/tv_latitude"
        android:layout_alignStart="@+id/tv_latitude"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction"
        android:id="@+id/tv_direction"
        android:layout_below="@+id/tv_longitude"
        android:layout_alignStart="@+id/tv_longitude"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:id="@+id/tv_distance"
        android:layout_below="@+id/tv_direction"
        android:layout_alignStart="@+id/tv_direction" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sb_distance"
        android:layout_below="@+id/tv_distance"
        android:layout_alignStart="@+id/tv_distance"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:max="10000" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pointer"
        android:adjustViewBounds="true"
        android:src="@drawable/compass"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_targetlongitude" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:singleLine="false"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:onClick="onClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:id="@+id/tv_seekdistance"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/tv_distance" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="E"
        android:id="@+id/tv_seekdirection"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/tv_direction" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/targetLat"
        android:id="@+id/tv_targetlatitude"
        android:foregroundTint="@color/accent_material_light"
        android:textColor="@color/accent_material_light"
        android:textStyle="bold"
        android:layout_below="@+id/sb_distance"
        android:layout_alignStart="@+id/sb_distance" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/targetLon"
        android:id="@+id/tv_targetlongitude"
        android:layout_alignStart="@+id/tv_latitude"
        android:layout_below="@+id/tv_targetlatitude"
        android:layout_marginBottom="10dp"
        android:textColor="@color/accent_material_light"
        android:textStyle="bold" />

</RelativeLayout>
